--- a/html/navbar.html
+++ b/html/navbar.html
@@ -2,16 +2,16 @@
     <div class="logo"><a href=""><img src="../images/logo.png" alt="" srcset=""></a></div>
     <div class="menu-navbar">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li class="menu-item">
           <a>Menu</a>
           <ul class="submenu">
-            <li class="submenu-item"><a href="baverage.html">Menu Beverage</a></li>
-            <li class="submenu-item"><a href="dessert.html">Menu Dessert</a></li>
+            <li class="submenu-item"><a href="../html/baverage.html">Menu Beverage</a></li>
+            <li class="submenu-item"><a href="../html/dessert.html">Menu Dessert</a></li>
           </ul>
         </li>
-        <li><a href="contact-us.html">Contact us</a></li>
-        <li><a href="payment.html">Payment</a></li>
+        <li><a href="../html/contact-us.html">Contact us</a></li>
+        <li><a href="../html/payment.html">Payment</a></li>
       </ul>
     </div>
 </div>
