--- a/html/dessert.html
+++ b/html/dessert.html
@@ -7,7 +7,7 @@
     <title>CAFFEIN LINE | DESSERT</title>
     <!-- <link rel="stylesheet" href="../css/desert.css"> -->
     <link rel="stylesheet" href="../css/menu.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <div class="wrapper">
