--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="kolom">
           <div class="wrap-slider">
             <button id="previous">
-              <img src="../images/arrow-left.png" alt="Prev" srcset="" />
+              <img src="images/arrow-left.png" alt="Prev" srcset="" />
             </button>
             <div id="slider-inner">
-              <div><img src="../images/image1.jpg"></div>
-              <div><img src="../images/image2.jpg"></div>
-              <div><img src="../images/image3.png"></div>
+              <div><img src="images/image1.jpg"></div>
+              <div><img src="images/image2.jpg"></div>
+              <div><img src="images/image3.png"></div>
             </div>
             <button id="next">
-              <img src="../images/arrow-right.png" alt="Next" srcset="" />
+              <img src="images/arrow-right.png" alt="Next" srcset="" />
             </button>
           </div>
         </div>
@@ -47,21 +47,21 @@
           <div class="tutor-list">
             <div class="kartu-tutor">
               <img
-                src="../images/person-icon.png"
+                src="images/person-icon.png"
                 alt=""
               />
               <p>Sean Lucky Khosasih</p>
             </div>
             <div class="kartu-tutor">
               <img
-                src="../images/person-icon.png"
+                src="images/person-icon.png"
                 alt=""
               />
               <p>Mochammad Taufiek Pratama Putra</p>
             </div>
             <div class="kartu-tutor">
               <img
-                src="../images/person-icon.png"
+                src="images/person-icon.png"
                 alt=""
               />
               <p>Riky Yulianto</p>
